Project

General

Profile

Actions

Bug #17951

closed

AdminSocket::bind_and_listen failed after rbd-nbd mapping

Added by min-sheng Lin over 7 years ago. Updated almost 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
kraken,jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Hi, I got the following error message, but looks like list-mapped and unmap still work?

vagrant@ceph-client-1:~$ sudo rbd create test --size 100M
vagrant@ceph-client-1:~$ sudo rbd-nbd map test
/dev/nbd0
vagrant@ceph-client-1:~$ sudo rbd-nbd list-mapped
2016-11-18 07:54:29.743393 7fe6145c9e00 -1 asok(0x55df5e257960) AdminSocketConfigObs::init: failed: AdminSocket::bind_and_listen: failed to bind the UNIX domain socket to '/var/run/ceph/ceph-client.admin.asok': (17) File exists
/dev/nbd0
vagrant@ceph-client-1:~$ sudo rbd-nbd unmap /dev/nbd0
2016-11-18 07:54:48.238738 7f6243b3be00 -1 asok(0x561ed2730960) AdminSocketConfigObs::init: failed: AdminSocket::bind_and_listen: failed to bind the UNIX domain socket to '/var/run/ceph/ceph-client.admin.asok': (17) File exists
vagrant@ceph-client-1:~$ sudo rbd-nbd list-mapped

Related issues 2 (0 open2 closed)

Copied to rbd - Backport #18970: kraken: rbd: AdminSocket::bind_and_listen failed after rbd-nbd mappingResolvedNathan CutlerActions
Copied to rbd - Backport #18971: jewel: AdminSocket::bind_and_listen failed after rbd-nbd mappingResolvedNathan CutlerActions
Actions #1

Updated by Mykola Golub about 7 years ago

  • Status changed from New to Pending Backport
  • Backport set to kraken,jewel
Actions #2

Updated by Loïc Dachary about 7 years ago

  • Copied to Backport #18970: kraken: rbd: AdminSocket::bind_and_listen failed after rbd-nbd mapping added
Actions #3

Updated by Loïc Dachary about 7 years ago

  • Copied to Backport #18971: jewel: AdminSocket::bind_and_listen failed after rbd-nbd mapping added
Actions #4

Updated by Nathan Cutler almost 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF