rbd-nbd: no need create asok file for unmap and list-mapped commands.

Fixes: http://tracker.ceph.com/issues/17951
Signed-off-by: Pan Liu <liupan1111@gmail.com>
(cherry picked from commit 72352653d585ef89043a4ece371b5c0cb3f6f32a)